<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"></LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#dcdcdc"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/b_height"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Customer Data"
                    android:textColor="@color/violet"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"

                android:phoneNumber="true"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/phone2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/phone2"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"

                android:minLines="1"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/shopName"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/shopname"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/custName"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/custname"
                android:imeOptions="actionNext"

                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/custDesg"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/custdesg"

                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="19dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="19dip"
                android:layout_weight="1"></Spinner>

            <Spinner
                android:id="@+id/btype"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="19dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="19dip"
                android:layout_weight="1"></Spinner>

            <Spinner
                android:id="@+id/spinner_shopRelevance"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="19dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="19dip"

                />

            <Spinner
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="19dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="19dip"
                android:layout_weight="1"></Spinner>

            <Spinner
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="19dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="19dip"
                android:layout_weight="1"></Spinner>

            <EditText
                android:id="@+id/country"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/country"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"

                android:minLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/departmnt"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/department"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"

                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/addr1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/addr1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"

                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/addr2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/addr2"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"

                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/addr3"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/addr3"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"

                android:minLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/addr4"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/addr4"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"

                android:minLines="1"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/addr5"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/addr5"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"

                android:numeric="decimal"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>


            <EditText
                android:id="@+id/emailid"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/emailid"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"

                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>

            <EditText
                android:id="@+id/place"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:hint="@string/place"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"

                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_size"></EditText>
            <!--
            <Spinner
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="19dip"
                android:layout_marginRight="19dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1" >
            </Spinner>

            <Spinner
                android:id="@+id/zone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="19dip"
                android:layout_marginRight="19dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1" >
            </Spinner>
            -->

            <Button
                android:id="@+id/addUser"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@color/violet"
                android:gravity="center"
                android:text="Save Customer"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size"></Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>