<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <TextView
        android:id="@+id/qRankingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet"
        android:padding="15dip"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_size" >
    </TextView>

    <ListView
        android:id="@+id/qRankingListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:background="@android:color/background_light"
        android:divider="@color/violet"
        android:dividerHeight="1dp">
    </ListView>

    <TextView
        android:id="@+id/txt_rank_scrollmsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dip"
        android:background="@color/violet"
        android:paddingBottom="3dip"
        android:paddingLeft="5dip"
        android:text="@string/scrolltext"
        android:textColor="#000000"
        android:textSize="13sp" >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:gravity="bottom" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/qRankingBack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:src="@drawable/back_button" />

            <TextView
                android:id="@+id/txtqDecisionBack"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/qRankingNext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:src="@drawable/next_button" />

            <TextView
                android:id="@+id/txtqDecisionNext"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight=".4"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="#000000"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>